# telegram-auto-message-bot

./: .dockerignore  .env.bak  .env.cors  .env.docker  .env.example  .env.real  .env.temp  .gitignore  .pre-commit-config.yaml  .telegram_2fa_password  .telegram_auth_code  API_KIMLIK_SORUNU_COZUM.md  CHANELOG-yedek.md  CHANGELOG.md  Dockerfile  Dockerfile.debug  Dockerfile.mini  Dockerfile.minimal  Dockerfile.staging  Dockerfile.staging.simple  Dockerfile.super  Dockerfile.ultra  Dockerfile.ultra-mini  FIX_README.md  KULLANIM.md  KURULUM.md  LICENSE  Makefile  POSTGRES_GECISI.md  README.md  README_MAINTENANCE.md  ROADMAP.md  ROADMAP342.md  Stratejiler.md  USAGE.md  alembic.ini  autostart_bot.py  bot_check_result.txt  bot_cli.py  bot_help.sh  (+91 more)
app/: __init__.py  bot.py  cli.py  client.py  config.py  database.py  integration_test.py  launch.py  logger.py  main.py  main.py-e  main.py.old  message_service.py  run_bot.py  scheduler.py  unified_runner.py
backups/: users_db_backup_20250410_215757.bak
bot/: OLD-main.py  base.py  celery_app.py  config.py  core.py  handlers.py  main.py  message_bot.py  service_manager.py  tasks.py  tdlib_integration.py
config/: __init__.py  config.json  config.py  settings.py
data/: analytics_export_test.csv  announcements.json  campaigns.json  dm_auto_reply.json  dm_templates.json  invites.json  messages.json  promo_campaigns.json  promo_templates.json  promos.json  responses.json  users.db-shm  users.db-wal  users.db.backup  users.db.bak
database/: db.py  db_connection.py  migration.py  models.py  schema.py  script.py  setup_db.py  sqlite_to_postgres.py  user_db.py
debug_bot/: error_handler.py  telegram_monitor.py
docs/: MULTI_TENANT_PLAN.md  TASKS.md  Untitled-1.MD  index.md
documents/: CHANGELOG.md  DOCKER_KURULUM.md  KULLANIM.md  MIGRATION_STATUS.md  MIGRATION_TO_4.0.md  TELEGRAM_API_AUTH_FIX_GUIDE.md  Versiyon4.md
e2e/: README.md  package.json  playwright.config.ts
scripts/: check_db_tables.py  create_basic_migration.py  create_latest_session.py  create_migration.py  create_migration_direct.py  create_simple_migration.py  fix_data_mining.py  fix_telethon_session_auto.py  fix_telethon_session_permanent.py  generate_migration.py  mark_existing_schema.py  reset_alembic.py  run_migrations.py  setup_postgres.py  test_db_connection.py  use_fresh_session.py
session_backup/: anon.session.bak  anon_new.session.bak  anon_new_new.session.bak  anon_new_new_new.session.bak  anon_new_new_new_new.session.bak  bot_session.session.bak  bot_session_clean.session.bak  (+10 more)
(+421 files in other folders)
